projects/orchestration/k8s/bolabaden/raw/mongodb-deployment.yml
#! mongodb-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: my-media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      restartPolicy: Always
      containers:
        - name: mongodb
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          command: ["mongod"]
          args: ["--bind_ip_all"]
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - mongosh 127.0.0.1:27017/test --quiet --eval 'db.runCommand("ping").ok' > /dev/null 2>&1 || exit 1
            periodSeconds: 10
            initialDelaySeconds: 40
            timeoutSeconds: 10
            failureThreshold: 5
          ports:
            - name: mongodb-27017
              containerPort: 27017
          volumeMounts:
            - name: data-db
              mountPath: /data/db
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: data-db
          hostPath:
            path: /home/ubuntu/my-media-stack/configs/mongodb/data
