projects/orchestration/k8s/bolabaden/raw/warp-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "21"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"21"},"generation":24,"labels":{"app":"warp-gateway","component":"vpn-gateway"},"name":"warp-gateway","namespace":"vpn-gateway"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"warp-gateway"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"warp-gateway","component":"vpn-gat [...]
  creationTimestamp: "2025-06-14T17:40:43Z"
  generation: 25
  labels:
    app: warp-gateway
    component: vpn-gateway
  name: warp-gateway
  namespace: vpn-gateway
  resourceVersion: "619446"
  uid: a3027c76-9135-4fb2-9a28-303acc40c0f8
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: warp-gateway
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: warp-gateway
        component: vpn-gateway
    spec:
      containers:
      - env:
        - name: WARP_SLEEP
          value: "2"
        - name: WARP_LICENSE_KEY
          value: eyJhIjoiZTRlYjNkYmViMTJiZWFhY2MxNzcwNDEyMzE3OTA0NTQiLCJ0IjoiM2ExODhhOTMtYzQwNC00Zjg5LTg4NzItOThlMDkxNjNiYzAzIiwicyI6Ill6SmpNVFl5WmpNdE9EYzROUzAwWlRrMUxUazFORFl0TWpnd1lXWXhZVEpsT1dNMiJ9
        - name: TUNNEL_TOKEN
          value: eyJhIjoiZTRlYjNkYmViMTJiZWFhY2MxNzcwNDEyMzE3OTA0NTQiLCJ0IjoiM2ExODhhOTMtYzQwNC00Zjg5LTg4NzItOThlMDkxNjNiYzAzIiwicyI6Ill6SmpNVFl5WmpNdE9EYzROUzAwWlRrMUxUazFORFl0TWpnd1lXWXhZVEpsT1dNMiJ9
        image: caomingjun/warp:latest
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl -s --max-time 5 --proxy socks5://127.0.0.1:1080 http://httpbin.org/ip
              >/dev/null
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: warp
        ports:
        - containerPort: 1080
          name: socks5-proxy
          protocol: TCP
        - containerPort: 3128
          name: http-proxy
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl -s --max-time 5 --proxy socks5://127.0.0.1:1080 http://httpbin.org/ip
              >/dev/null
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - MKNOD
            - AUDIT_WRITE
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/cloudflare-warp
          name: warp-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        sysctls:
        - name: net.ipv6.conf.all.disable_ipv6
          value: "1"
        - name: net.ipv4.conf.all.src_valid_mark
          value: "1"
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /home/ubuntu/my-media-stack/configs/warp/data
          type: DirectoryOrCreate
        name: warp-data
status:
  conditions:
  - lastTransitionTime: "2025-06-14T17:40:43Z"
    lastUpdateTime: "2025-06-14T17:41:38Z"
    message: ReplicaSet "warp-gateway-8667b8dcf8" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-06-14T18:15:23Z"
    lastUpdateTime: "2025-06-14T18:15:23Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 25
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
