projects/orchestration/k8s/bolabaden/raw/aiostreams-expose.yml
apiVersion: v1
kind: Service
metadata:
  name: aiostreams
  namespace: my-media-stack
spec:
  selector: {}
  ports:
    - name: aiostreams-3005
      port: 3005
      targetPort: aiostreams-3005
