projects/orchestration/k8s/bolabaden/raw/stremio-jackett-expose.yml
#! stremio-jackett-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
  name: stremio-jackett
  namespace: my-media-stack
spec:
  selector: {}
  ports:
    - name: stremio-ja-3000
      port: 3000
      targetPort: stremio-ja-3000
