projects/orchestration/k8s/bolabaden/raw/tinyauth-expose.yml
#! tinyauth-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
  name: tinyauth
  namespace: my-media-stack
spec:
  selector: {}
  ports:
    - name: tinyauth-3000
      port: 3000
      targetPort: tinyauth-3000
