projects/orchestration/k8s/bolabaden/raw/whoami-expose.yml
#! whoami-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: my-media-stack
spec:
  selector: {}
  ports:
    - name: whoami-80
      port: 80
      targetPort: whoami-80
